poke/testsuite/poke.pkl/printf-diag-16.pk
/* { dg-do compile} */

printf "foo%9i32d", 12; /* { dg-error "invalid numerical prefix" } */
